--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "a practise for node and express project, a web app for tourists",
   "main": "meadowlark.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha -u tdd -R spec ./qa/tests-unit.js"
   },
   "keywords": [
     "node",
@@ -16,7 +16,38 @@
   "author": "mxy",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "connect-bundle": "0.0.5-beta",
+    "connect-rest": "^3.0.29",
+    "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
+    "csurf": "^1.10.0",
     "express": "^4.17.1",
-    "express-handlebars": "^3.1.0"
+    "express-handlebars": "^3.1.0",
+    "express-logger": "0.0.3",
+    "express-session": "^1.16.2",
+    "formidable": "^1.2.1",
+    "jquery-file-upload-middleware": "^0.1.8",
+    "mongoose": "^5.6.9",
+    "morgan": "^1.9.1",
+    "nodemailer": "^6.3.0",
+    "nodemailer-smtp-transport": "^2.7.4",
+    "vhost": "^3.0.2"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "grunt": "^0.4.1",
+    "grunt-cafe-mocha": "^0.1.13",
+    "grunt-contrib-cssmin": "^3.0.0",
+    "grunt-contrib-jshint": "^0.11.3",
+    "grunt-contrib-less": "^2.0.0",
+    "grunt-contrib-uglify": "^4.0.1",
+    "grunt-exec": "^3.0.0",
+    "grunt-hashres": "^0.4.1",
+    "loadtest": "^3.0.7",
+    "mocha": "^6.2.0",
+    "pug": "^2.0.4",
+    "restler": "^3.4.0",
+    "zombie": "^6.1.4"
   }
 }
